--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TherapiApp">
+        <activity android:name=".AnmeldingErfolgreich"></activity>
         <activity android:name=".Registrierung2" />
         <activity android:name=".Datenschutz" />
+        <activity android:name=".Einstellungen" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".Kontakte" />
         <activity android:name=".Wiki" />
