--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TherapiApp">
-        <activity android:name=".AnmeldingErfolgreich"></activity>
+        <activity android:name=".ProfileBearbeiten"></activity>
+        <activity android:name=".AnmeldingErfolgreich" />
         <activity android:name=".Registrierung2" />
         <activity android:name=".Datenschutz" />
         <activity android:name=".Einstellungen" />
@@ -19,17 +20,20 @@
         <activity android:name=".ChatBot" />
         <activity android:name=".KontactFormular" />
         <activity android:name=".Hilfe" />
-        <activity android:name=".Profil" />
-        <activity android:name=".Tagesziel" />
-        <activity android:name=".Ubungen" />
-        <activity android:name=".Tagebuch" />
-        <activity android:name=".Startseite" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Profil">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Tagesziel" />
+        <activity android:name=".Ubungen" />
+        <activity android:name=".Tagebuch" />
+        <activity android:name=".Startseite" />
+<!--        hier -->
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
