--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity android:name=".Activities" />
         <activity android:name=".Tagebuch" />
         <activity android:name=".Startseite" /> <!-- hier -->
+        <activity android:name=".NewActivities"/>
+        <activity android:name=".SelectActivityType"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
