--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".Startseite" /> <!-- hier -->
         <activity android:name=".NewActivities"/>
         <activity android:name=".SelectActivityType"/>
+        <activity android:name=".WikiItem"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
