--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
 //    implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation group: 'com.amitshekhar.android', name: 'android-networking', version: '1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
