app logo, small refactor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,30 +12,30 @@
         android:roundIcon="@mipmap/genki"
         android:supportsRtl="true"
         android:theme="@style/Theme.TherapiApp">
-        <activity android:name=".ZweckActivity"></activity>
-        <activity android:name=".NotfallKontakte" />
-        <activity android:name=".TagesbuchList" />
-        <activity android:name=".ProfileBearbeiten" />
-        <activity android:name=".AnmeldingErfolgreich" />
-        <activity android:name=".Registrierung2" />
-        <activity android:name=".Datenschutz" />
-        <activity android:name=".Einstellungen" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".Kontakte" />
-        <activity android:name=".Wiki" />
-        <activity android:name=".ChatBot" />
-        <activity android:name=".KontactFormular" />
-        <activity android:name=".Hilfe" />
-        <activity android:name=".Profil" />
-        <activity android:name=".Tagesziel" />
-        <activity android:name=".Activities" />
-        <activity android:name=".Tagebuch" />
+        <activity android:name=".tagesbuch.TagesbuchList" />
+        <activity android:name=".tagesbuch.Tagebuch" />
+        <activity android:name=".register.ZweckActivity" />
+        <activity android:name=".register.AnmeldingErfolgreich" />
+        <activity android:name=".register.Registrierung2" />
+        <activity android:name=".register.RegisterActivity" />
+        <activity android:name=".wiki.Wiki" />
+        <activity android:name=".wiki.WikiItem" />
+        <activity android:name=".chat_bot.ChatBot" />
+        <activity android:name=".other.NotfallKontakte" />
+        <activity android:name=".other.ProfileBearbeiten" />
+        <activity android:name=".other.Datenschutz" />
+        <activity android:name=".other.Einstellungen" />
+        <activity android:name=".other.Kontakte" />
+        <activity android:name=".other.KontactFormular" />
+        <activity android:name=".other.Hilfe" />
+        <activity android:name=".other.Profil" />
+        <activity android:name=".ubungen.Activities" />
+        <activity android:name=".ubungen.NewActivities" />
+        <activity android:name=".ubungen.SelectActivityType" />
+        <activity android:name=".ubungen.ActivityItem" />
+        <activity android:name=".ubungen.OpenActivityItem" />
+        <activity android:name=".tagesziel.Tagesziel" />
         <activity android:name=".Startseite" /> <!-- hier -->
-        <activity android:name=".NewActivities" />
-        <activity android:name=".SelectActivityType" />
-        <activity android:name=".WikiItem" />
-        <activity android:name=".ActivityItem" />
-        <activity android:name=".OpenActivityItem" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
